<resources>
    <string name="app_name">skrabol</string>
    <string name="main_dict">Dictionary</string>
    <string name="main_game">Game Word</string>
    <string name="main_board">Game Board</string>
    <string name="main_title">SKRABOL</string>
    <string name="dict_update">Update</string>
    <string name="dict_search">Search</string>
    <string name="dict_run">Populate</string>
    <string name="dict_word">Word Here</string>
    <string name="dict_details">Details Here</string>
    <string name="game_tag">game_content_desc</string>
    <string name="game_points">0</string>
    <string name="game_word">- - - - - - -</string>
    <string name="game_status">No Word Played Yet</string>
    <string name="game_reroll">Re-roll</string>
    <string name="game_clear">Clear</string>
    <string name="game_search">Word Search Here</string>
    <string name="game_legends">Points According to Tiles</string>
    <string name="game_points1">One (1) Point:</string>
    <string name="game_points2">Two (2) Points:</string>
    <string name="game_points3">Three (3) Points:</string>
    <string name="game_points4">Four (4) Points:</string>
    <string name="game_points5">Five (5) Points:</string>
    <string name="game_points8">Eight (8) Points:</string>
    <string name="game_points10">Ten (10) Points:</string>

    <string name="board_turnlbl">Turn #:</string>
    <string name="board_points1">Player 1 Points:</string>
    <string name="board_pass">Pass</string>
    <string name="board_draw">Draw</string>
    <string name="board_swap">Swap</string>
    <string name="board_status">Game Started! 1st Turn, Create Word</string>
</resources>