<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView android:id="@+id/img_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/bg_intro"
        android:scaleType="fitXY"

        app:layout_constraintTop_toBottomOf="@+id/mainHeaderImgBgTop"
        app:layout_constraintBottom_toTopOf="@+id/mainHeaderImgBgDown"
        app:layout_constraintLeft_toRightOf="@id/mainHeaderImgBgLeft"
        app:layout_constraintRight_toLeftOf="@id/mainHeaderImgBgRight"/>
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainHeaderImgBgTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainHeaderImgBgDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="1"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainHeaderImgBgLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="-0.3"
        android:orientation="vertical" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainHeaderImgBgRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="1"
        android:orientation="vertical" />
    <!-- ************************************ VIEW BOUNDARY HERE -->


    <TextView android:id="@+id/lbl_apptitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/main_title"

        android:textColor="@color/white"

        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeStepGranularity="2sp"

        app:layout_constraintTop_toBottomOf="@+id/mainMiscellaneousLblTop"
        app:layout_constraintBottom_toTopOf="@+id/mainMiscellaneousLblDown"
        app:layout_constraintLeft_toRightOf="@id/mainMiscellaneousLblLeft"
        app:layout_constraintRight_toLeftOf="@id/mainMiscellaneousLblRight"/>
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainMiscellaneousLblTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.07"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainMiscellaneousLblDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.15"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainMiscellaneousLblLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="vertical" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainMiscellaneousLblRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.55"
        android:orientation="vertical" />
    <!-- ************************************ VIEW BOUNDARY HERE -->




    <!--android:background="@drawable/custom_btn_1"-->
    <Button android:id="@+id/btn_dict"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:backgroundTint="@color/white"

        android:text="@string/main_dict"
        android:textColor="@color/purple_700"

        android:padding="10sp"

        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeStepGranularity="2sp"

        app:layout_constraintTop_toBottomOf="@+id/mainDictBtnTop"
        app:layout_constraintBottom_toTopOf="@+id/mainDictBtnDown"
        app:layout_constraintLeft_toRightOf="@id/mainDictBtnLeft"
        app:layout_constraintRight_toLeftOf="@id/mainDictBtnRight"/>
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainDictBtnTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.55"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainDictBtnDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.63"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainDictBtnLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.11"
        android:orientation="vertical" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainDictBtnRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical" />
    <!-- ************************************ VIEW BOUNDARY HERE -->

    <!--android:background="@drawable/custom_btn_1"-->
    <Button android:id="@+id/btn_game"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:backgroundTint="@color/white"

        android:text="@string/main_game"
        android:textColor="@color/purple_700"

        android:padding="10sp"

        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeStepGranularity="2sp"

        app:layout_constraintTop_toBottomOf="@+id/mainGameBtnTop"
        app:layout_constraintBottom_toTopOf="@+id/mainGameBtnDown"
        app:layout_constraintLeft_toRightOf="@id/mainGameBtnLeft"
        app:layout_constraintRight_toLeftOf="@id/mainGameBtnRight"/>
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainGameBtnTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.66"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainGameBtnDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.74"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainGameBtnLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.11"
        android:orientation="vertical" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainGameBtnRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical" />
    <!-- ************************************ VIEW BOUNDARY HERE -->

    <!--android:background="@drawable/custom_btn_1"-->
    <Button android:id="@+id/btn_board"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:backgroundTint="@color/white"

        android:text="@string/main_board"
        android:textColor="@color/purple_700"

        android:padding="10sp"

        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeStepGranularity="2sp"

        app:layout_constraintTop_toBottomOf="@+id/mainBoardBtnTop"
        app:layout_constraintBottom_toTopOf="@+id/mainBoardBtnDown"
        app:layout_constraintLeft_toRightOf="@id/mainBoardBtnLeft"
        app:layout_constraintRight_toLeftOf="@id/mainBoardBtnRight"/>
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainBoardBtnTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.77"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainBoardBtnDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.85"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainBoardBtnLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.11"
        android:orientation="vertical" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainBoardBtnRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical" />
    <!-- ************************************ VIEW BOUNDARY HERE -->


</androidx.constraintlayout.widget.ConstraintLayout>