<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DictionaryActivity">

    <!--android:background="@drawable/custom_btn_1"-->
    <EditText android:id="@+id/edx_word"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:backgroundTint="@color/white"

        android:hint="@string/dict_word"
        android:textColor="@color/purple_700"

        android:padding="10sp"

        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeStepGranularity="2sp"

        app:layout_constraintTop_toBottomOf="@+id/dictWordEdxTop"
        app:layout_constraintBottom_toTopOf="@+id/dictWordEdxDown"
        app:layout_constraintLeft_toRightOf="@id/dictWordEdxLeft"
        app:layout_constraintRight_toLeftOf="@id/dictWordEdxRight"/>
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictWordEdxTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.02"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictWordEdxDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.08"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictWordEdxLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="vertical" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictWordEdxRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.95"
        android:orientation="vertical" />
    <!-- ************************************ VIEW BOUNDARY HERE -->

    <!--android:background="@drawable/custom_btn_1"-->
    <EditText android:id="@+id/edx_details"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:backgroundTint="@color/white"

        android:hint="@string/dict_details"
        android:textColor="@color/purple_700"

        android:padding="10sp"

        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeStepGranularity="2sp"

        app:layout_constraintTop_toBottomOf="@+id/dictDetailsEdxTop"
        app:layout_constraintBottom_toTopOf="@+id/dictDetailsEdxDown"
        app:layout_constraintLeft_toRightOf="@id/dictDetailsEdxLeft"
        app:layout_constraintRight_toLeftOf="@id/dictDetailsEdxRight"/>
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictDetailsEdxTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.09"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictDetailsEdxDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.15"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictDetailsEdxLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="vertical" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictDetailsEdxRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.95"
        android:orientation="vertical" />
    <!-- ************************************ VIEW BOUNDARY HERE -->


    <!--android:background="@drawable/custom_btn_1"-->
    <Spinner android:id="@+id/spn_category"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:backgroundTint="@color/white"

        android:textColor="@color/purple_700"

        android:padding="10sp"

        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeStepGranularity="2sp"

        app:layout_constraintTop_toBottomOf="@+id/dictCategorySpnTop"
        app:layout_constraintBottom_toTopOf="@+id/dictCategorySpnDown"
        app:layout_constraintLeft_toRightOf="@id/dictCategorySpnLeft"
        app:layout_constraintRight_toLeftOf="@id/dictCategorySpnRight"/>
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictCategorySpnTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.16"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictCategorySpnDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.22"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictCategorySpnLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="vertical" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictCategorySpnRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.95"
        android:orientation="vertical" />
    <!-- ************************************ VIEW BOUNDARY HERE -->



    <!--android:background="@drawable/custom_btn_1"-->
    <ImageView android:id="@+id/btn_delete"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:backgroundTint="@color/white"

        android:src="@drawable/ic_baseline_delete_24"

        app:layout_constraintTop_toBottomOf="@+id/dictDeleteBtnTop"
        app:layout_constraintBottom_toTopOf="@+id/dictDeleteBtnDown"
        app:layout_constraintLeft_toRightOf="@id/dictDeleteBtnLeft"
        app:layout_constraintRight_toLeftOf="@id/dictDeleteBtnRight"/>
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictDeleteBtnTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.25"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictDeleteBtnDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.32"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictDeleteBtnLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.63"
        android:orientation="vertical" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictDeleteBtnRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.76"
        android:orientation="vertical" />
    <!-- ************************************ VIEW BOUNDARY HERE -->

    <Button android:id="@+id/btn_search"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:backgroundTint="@color/white"

        android:text="@string/dict_search"
        android:textColor="@color/purple_700"

        android:padding="10sp"

        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeStepGranularity="2sp"

        app:layout_constraintTop_toBottomOf="@+id/dictSearchBtnTop"
        app:layout_constraintBottom_toTopOf="@+id/dictSearchBtnDown"
        app:layout_constraintLeft_toRightOf="@id/dictSearchBtnLeft"
        app:layout_constraintRight_toLeftOf="@id/dictSearchBtnRight"/>
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictSearchBtnTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.25"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictSearchBtnDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.32"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictSearchBtnLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="vertical" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictSearchBtnRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.31"
        android:orientation="vertical" />
    <!-- ************************************ VIEW BOUNDARY HERE -->

    <Button android:id="@+id/btn_update"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:backgroundTint="@color/white"

        android:text="@string/dict_update"
        android:textColor="@color/purple_700"

        android:padding="10sp"

        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeStepGranularity="2sp"

        app:layout_constraintTop_toBottomOf="@+id/dictUpdateBtnTop"
        app:layout_constraintBottom_toTopOf="@+id/dictUpdateBtnDown"
        app:layout_constraintLeft_toRightOf="@id/dictUpdateBtnLeft"
        app:layout_constraintRight_toLeftOf="@id/dictUpdateBtnRight"/>
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictUpdateBtnTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.25"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictUpdateBtnDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.32"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictUpdateBtnLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.33"
        android:orientation="vertical" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictUpdateBtnRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.59"
        android:orientation="vertical" />
    <!-- ************************************ VIEW BOUNDARY HERE -->

    <!--android:background="@drawable/custom_btn_1"-->
    <ImageView android:id="@+id/btn_run"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:backgroundTint="@color/white"
        android:padding="2sp"

        android:src="@drawable/ic_baseline_play_circle_filled_24"

        app:layout_constraintTop_toBottomOf="@+id/dictRunBtnTop"
        app:layout_constraintBottom_toTopOf="@+id/dictRunBtnDown"
        app:layout_constraintLeft_toRightOf="@id/dictRunBtnLeft"
        app:layout_constraintRight_toLeftOf="@id/dictRunBtnRight"/>
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictRunBtnTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.25"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictRunBtnDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.32"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictRunBtnLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.78"
        android:orientation="vertical" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/dictRunBtnRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.93"
        android:orientation="vertical" />
    <!-- ************************************ VIEW BOUNDARY HERE -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvwDictionary"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeStepGranularity="2sp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/mainMiscellaneousListTop"
        app:layout_constraintBottom_toTopOf="@+id/mainMiscellaneousListDown"
        app:layout_constraintLeft_toRightOf="@id/mainMiscellaneousListLeft"
        app:layout_constraintRight_toLeftOf="@id/mainMiscellaneousListRight"/>
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainMiscellaneousListTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.33"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainMiscellaneousListDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.97"
        android:orientation="horizontal" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainMiscellaneousListLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="vertical" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/mainMiscellaneousListRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.95"
        android:orientation="vertical" />
    <!-- ************************************ VIEW BOUNDARY HERE -->


</androidx.constraintlayout.widget.ConstraintLayout>